# NeoUltimaOS

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
image/: CMakeLists.txt
image/root/subdir/: test.txt
scripts/: build_image.sh  elf_to_efi.py  run.sh
src/boot/: CMakeLists.txt  bootloader.c  elf64.h  entry.asm  linker.ld
src/kernel/: CMakeLists.txt  ScreenTextDevice.hpp  bootdefs.h  font.hpp  linker.ld  main.cpp  serial.hpp
